<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".ResimEkle">

    <ImageView
        android:id="@+id/resim_ekle_img"
        android:layout_width="315dp"
        android:layout_height="315dp"
        android:layout_marginBottom="175dp"
        android:contentDescription="@string/todo1"
        android:onClick="resim_sec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <EditText
        android:id="@+id/resim_ekle_txt"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/a_klama"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="@+id/resim_ekle_img"
        app:layout_constraintStart_toStartOf="@+id/resim_ekle_img"
        app:layout_constraintTop_toBottomOf="@+id/resim_ekle_img" />

    <Button
        android:id="@+id/resim_ekle_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="gonder"
        android:text="@string/g_nder1"
        app:layout_constraintEnd_toEndOf="@+id/resim_ekle_txt"
        app:layout_constraintTop_toBottomOf="@+id/resim_ekle_txt" />
</android.support.constraint.ConstraintLayout>